# Scior

./: .gitignore  README.md  dataclasses.py  ontcatowl.py  ontcatowl_dataclasses.py  pyproject.toml  requirements.txt  setup.cfg
documentation/: OntCatOWL-Execution-Modes.md  OntCatOWL-Functioning.md  OntCatOWL-ImplementedRules.md  Rules.xlsx  Scior-Execution-Modes.md  Scior-Functioning.md  Scior-Implemented-Rules-Actions.md  Scior-Implemented-Rules-Definitions.md  Scior-Implemented-Rules.md  Scior-ImplementedRules.md  Scior-Tests.md  Scior-Theoretical-Rules.md
modules/: aux_general.py  aux_rdf.py  data_definition_gufo.py  data_initialization_gufo.py  data_initialization_gufo2.py  data_initialization_ontology.py  data_loading.py  dataclass_definitions.py  dataclass_definitions_gufo.py  dataclass_definitions_ontology.py  dataclass_verifications.py  functions_propagation.py  global_configurations.py  graph_save_ontology.py  initialization_arguments.py  initialization_data_graph.py  initialization_data_gufo.py  initialization_data_gufo_dictionary.py  initialization_data_ontology_dataclass.py  logger_config.py  logger_module.py  ontcatowl_dataclasses.py  propagation.py  rdflib_aux.py  report_content.py  report_printer.py  results_calculation.py  results_classes.py  results_printer.py  results_screen_printer.py  rule_type_implementations.py  rules_actions.py  rules_global_configs.py  rules_hierarchy_individuals.py  rules_hierarchy_types.py  rules_ontological_nature.py  rules_rigidity.py  rules_sortality.py  rules_type_implementations.py  rules_types_actions.py  (+11 more)
ontcatowl/: __init__.py  main.py  ontcatowl.py
resources/: d3fend.ttl  gufoEndurantsOnly.ttl  (+1 more)
(+312 files in other folders)
