[metadata]
name = OntCatOWL
author = pedropaulofb
description = Identification of Ontological Categories for OWL Ontologies.
url = https://github.com/unibz-core/OntCatOWL
keywords = ontologies, ontological-evaluation
version = 0.1
[options]
python_requires = >=3.11, <4
install_requires =
    owlrl~=6.0.2
    prettytable~=3.4.1
    PyYAML~=6.0
    rdflib~=6.2.0