[metadata]
name = OntCatOWL
author = Pedro Paulo F. Barcelos
description = Identification of Ontological Categories for OWL Ontologies.
url = https://github.com/unibz-core/OntCatOWL
keywords = ontologies, ontological-evaluation, ontology-engineering
version = 0.22.12.05

[options]
python_requires = >=3.11, <4
install_requires =
    owlrl~=6.0.2
    prettytable~=3.4.1
    PyYAML~=6.0
    rdflib~=6.2.0
packages =
    ontcatowl
include_package_data = True