[metadata]
name = Scior
author = Pedro Paulo F. Barcelos
description = Identification of Ontological Categories for OWL Ontologies.
url = https://github.com/unibz-core/scior
keywords = ontologies, ontological-evaluation, ontology-engineering
version = 0.23.01.18
[options]
python_requires = >=3.11, <4
install_requires =
    owlrl~=6.0.2
    prettytable~=3.4.1
    psutil~=5.9.4
    PyYAML~=6.0
    rdflib~=6.2.0
    setuptools~=65.5.0
packages =
    scior
    scior.modules
    scior.resources
    scior.modules.rules
    scior.modules.results
    scior.modules.problems_treatment
    scior.modules.ontology_dataclassess
include_package_data = True

[options.package_data]
scior.resources =
    *.yaml
    *.ttl
